--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test": "jest",
     "build-bundle": "vue-cli-service build --target lib --name lq.helper src/main.js",
     "dist": "webpack --config build/webpack.common.js"
   },
   "dependencies": {
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-jest": "^24.9.0",
+    "babel-preset-env": "^1.7.0",
     "babel-runtime": "^6.26.0",
+    "jest": "^24.9.0",
     "recursive-copy": "^2.0.10",
     "vue": "^2.6.10"
   },
@@ -19,7 +24,7 @@
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
     "babel-plugin-component": "^1.1.1",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "^2.6.10",
     "webpack-cli": "^3.2.3"
   }
 }
