--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "build-bundle": "vue-cli-service build --target lib --name lq.helper src/main.js",
     "dist": "webpack --config build/webpack.common.js"
   },
-  "dependencies": {
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-jest": "^24.9.0",
+  "dependencies": {        
     "babel-preset-env": "^1.7.0",
-    "babel-runtime": "^6.26.0",
-    "jest": "^24.9.0",
-    "recursive-copy": "^2.0.10",
-    "vue": "^2.6.10"
+    "babel-runtime": "^6.26.0"   
+    
   },
   "main": "/dist/lq.helper.common.js",
   "devDependencies": {
+    "recursive-copy": "^2.0.10",
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-jest": "^24.9.0",
+    "vue": "^2.6.10",
+    "jest": "^24.9.0",
     "@babel/polyfill": "^7.2.5",
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
