--- a/package.json
+++ b/package.json
@@ -10,13 +10,7 @@
     "dist": "webpack --config build/webpack.common.js"
   },
   "dependencies": {
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-jest": "^24.9.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-runtime": "^6.26.0",
-    "jest": "^24.9.0",
-    "recursive-copy": "^2.0.10",
-    "vue": "^2.6.10"
+    
   },
   "main": "/dist/lq.helper.common.js",
   "devDependencies": {
@@ -25,6 +19,13 @@
     "@vue/cli-service": "^3.2.0",
     "babel-plugin-component": "^1.1.1",
     "vue-template-compiler": "^2.6.10",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-jest": "^24.9.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-runtime": "^6.26.0",
+    "jest": "^24.9.0",
+    "recursive-copy": "^2.0.10",
+    "vue": "^2.6.10"
   }
 }
