--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
     "name": "vuejs-object-helper",
-    "version": "0.1.30",
+    "version": "0.1.31",
     "private": false,
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "test": "jest",
+        "build-js": "babel src/main.js -o dist/index.js --no-comments",
         "build-bundle": "vue-cli-service build --target lib --name lq.helper src/main.js",
         "dist": "webpack --config build/webpack.common.js"
     },
-    "dependencies": {
-        "babel-preset-env": "^1.7.0",
-        "babel-runtime": "^6.26.0"
-    },
+    "dependencies": {},
     "main": "/dist/lq.helper.common.js",
     "devDependencies": {
-        "@babel/polyfill": "^7.2.5",
-        "@vue/cli-plugin-babel": "^3.2.0",
-        "@vue/cli-service": "^3.2.0",
-        "@vue/test-utils": "^1.0.0-beta.29",
+        "@babel/cli": "^7.7.7",
+        "@babel/core": "^7.7.7",
+        "@babel/plugin-proposal-class-properties": "^7.7.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+        "@babel/plugin-transform-modules-commonjs": "^7.7.5",
+        "@babel/plugin-transform-object-assign": "^7.7.4",
+        "@babel/preset-env": "^7.7.7",
+        "@babel/preset-react": "^7.7.4",
+        "@vue/cli-service": "^4.1.2",
         "babel-jest": "^24.9.0",
-        "babel-plugin-component": "^1.1.1",
+        "babel-preset-minify": "^0.5.1",
         "jest": "^24.9.0",
-        "recursive-copy": "^2.0.10",
-        "vue": "^2.6.10",
-        "vue-template-compiler": "^2.6.10",
-        "webpack-cli": "^3.2.3"
+        "regenerator-runtime": "^0.13.3",
+        "vue": "^2.6.11",
+        "vue-template-compiler": "^2.6.11"
     }
 }
